<resources>
    <string name="app_name">dhbw_minigame</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Reflex Test!</string>
    <string name="editText_username">Your name</string>
    <string name="button_start">Start the game</string>
    <string name="highscore_title">Highscore</string>
    <string name="playername">Your name</string>
    <string name="textView_level">Level</string>

</resources>
